--- a/styles/application.css
+++ b/styles/application.css
@@ -64,10 +64,11 @@ body {
 }
 
 #navigation {
+    -webkit-app-region: drag;
     position: absolute;
     left: 0; top: 0;
 
-    width: 250px;
+    width: 120px;
     height: 100%;
 
     background-color: #34495e;
@@ -76,6 +77,10 @@ body {
     font-size: 17px;
     letter-spacing: 1px;
     color: #ffffff;
+}
+s
+#navigation * {
+  -webkit-app-region: no-drag;
 }
 
 #navigation .brand {
@@ -155,7 +160,7 @@ body {
     width: 100%;
     height: 100%;
 
-    padding-left: 250px;
+    padding-left: 120px;
 }
 
 #grammar, #processing {
